button mobile fix roll call

--- a/src/components/CardStack/index.scss
+++ b/src/components/CardStack/index.scss
@@ -1,5 +1,5 @@
 .stackOverflow {
-  height: 96.9%;
+  height: 100%;
   width: 75%;
   overflow-y: hidden;
   overflow-x: hidden;
