--- a/src/views/Delegates/components/RollCall/index.scss
+++ b/src/views/Delegates/components/RollCall/index.scss
@@ -4,7 +4,8 @@
   width: 40%;
   height: 75%;
   min-width: 500px;
-  padding: 3%;
+  padding: 3% 3% 0 3%;
+  overflow: hidden;
   background-color: white;
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
@@ -29,7 +30,9 @@
     justify-content: center;
 
     @include max-media(mobile) {
+      height: 90%;
       flex-direction: column;
+      justify-content: space-between;
     }
 
     #selection {
@@ -59,12 +62,9 @@
         box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
         cursor: pointer;
 
-        @include max-media(tablet) {
-          margin: 1rem 1rem 1rem 0;
-        }
-
         @include max-media(mobile) {
           font-size: 14px;
+          margin: 1rem 1rem 1rem 0;
         }
 
         &#notPresent {
